# devops-cloud-k8s-flask

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/src/: main.py  routes.py
app/src/templates/: index.html
app/tests/: test_api_hello.py  test_health.py
docker/: Dockerfile
k8s/ec2/: deployment.yaml  service.yaml
k8s/ingress/: ingress.yaml
k8s/strategy/: blue.yaml  green.yaml
